feat(fase1-4): add Odin Project-style structure to all modules
Add 5 Odin-style sections to all READMEs in fases 1-4:
- Antes de começar, O que você vai aprender, Knowledge Check,
  Projeto, Recursos Adicionais

Modules updated:
- fase1-c: 02-ponteiros-memoria, 03-estruturas-dados,
  04-algoritmos-ordenacao, 05-arvores, 06-algoritmos-avancados
- fase2-sistemas: 01-processos-sinais, 02-file-descriptors,
  03-threads-concorrencia, 04-sockets
- fase3-cpp: 01-transicao, 02-oop, 03-stl, 04-modern-cpp
- fase4-java: 01-fundamentos, 02-collections-streams,
  03-concorrencia, 04-jvm, 05-design-patterns

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>